Issue/#2019 notification UI (#2153)
* Refactor error notifications